--- a/pager/index.pug
+++ b/pager/index.pug
@@ -51,7 +51,7 @@ html(lang="en")
 		.screen-title
 			.screen-title__left
 				h1.title-h1 Pager Freemint
-				.title-prev Buyback: Dec, 30
+				.title-prev Buyback: January, 1
 				//- a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
@@ -65,7 +65,7 @@ html(lang="en")
 		.screen-stock
 			.screen-stock__wrapper
 				.screen-stock_title 10000 pagers in stock
-				.stock-p Mint BASIC PAGER, upgrade it to increase the price and sell on buyback on 30 Dec.
+				.stock-p Mint BASIC PAGER, upgrade it to increase the price and sell on buyback on January 1.
 				.screen-stock__slider
 					.screen-stock__slider-item
 						.slider-item__slide-tables
@@ -234,7 +234,7 @@ html(lang="en")
 					button.screen-your__btn Upgrade to PAGER Pro
 					div.sell-nft-wrap
 						button.screen-your__btn_transp Sell
-							span Buyback on Dec, 30
+							span Buyback on January, 1
 						
 						//- a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
 						//- 	| Trade on Tradeport now
@@ -282,7 +282,7 @@ html(lang="en")
 					button.screen-your__btn Upgrade to PAGER Ultra
 					div.sell-nft-wrap
 						button.screen-your__btn_transp Sell
-							span Buyback on Dec, 30
+							span Buyback on January, 1
 						
 						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
 							| Trade on Tradeport now
@@ -314,7 +314,7 @@ html(lang="en")
 				.screen-your__send
 					div.sell-nft-wrap
 						button.screen-your__btn_transp Sell
-							span Buyback on Dec, 30
+							span Buyback on January, 1
 						
 						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
 							| Trade on Tradeport now
@@ -370,7 +370,7 @@ html(lang="en")
 				.section-faq__answer The more users mint  NFT's, the lower its price. To maximize your benefits you can sell the NFT at one of two pre sales or get more upgrades.
 			.section-faq__item
 				.section-faq__ask How to sell NFTs
-				.section-faq__answer After December 30 or during pre sales, there will be a button on the website to burn the NFT. Until then, you can sell NFTs on Tradeport to other traders
+				.section-faq__answer After January 1 or during pre sales, there will be a button on the website to burn the NFT. Until then, you can sell NFTs on Tradeport to other traders
 			.section-faq__item
 				.section-faq__ask What to do if the NFT doesn’t update after a successful transfer
 				.section-faq__answer If your transfer isn't credited, contact our technical support on 
