--- a/pager/index.pug
+++ b/pager/index.pug
@@ -52,7 +52,7 @@ html(lang="en")
 			.screen-title__left
 				h1.title-h1 Pager Freemint
 				.title-prev Buyback: January, 1
-				//- a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
+				a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
 					img(src="./images/logo-here.svg")
@@ -284,8 +284,8 @@ html(lang="en")
 						button.screen-your__btn_transp Sell
 							span Buyback on January, 1
 						
-						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
-							| Trade on Tradeport now
+						//- a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
+						//- 	| Trade on Tradeport now
 
 					span.screen-your__error
 
