--- a/pager/index.pug
+++ b/pager/index.pug
@@ -32,7 +32,7 @@ html(lang="en")
 
 	body
 		.header(style="padding-top:32px")
-			a(href="https://herewallet.app").logo
+			a(href="https://near.herewallet.app").logo
 				img(src="images/logo-here.svg", alt="HERE")
 			.follow-us
 				.follow-us__title Follow us:
@@ -52,7 +52,7 @@ html(lang="en")
 			.screen-title__left
 				h1.title-h1 Pager Freemint
 				.title-prev Buyback: January, 1
-				a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
+				a(href="https://www.google.com/search?q=PAGER+FREEMINT+HERE+Wallet+blog", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
 					img(src="./images/logo-here.svg")
@@ -380,7 +380,7 @@ html(lang="en")
 			.section-faq__item
 				.section-faq__ask How to withdraw USDT to a bank card
 				.section-faq__answer 
-					a(href="https://www.herewallet.app/blog/how-to-withdraw-to-card") You can withdraw NEAR to Binance or other exchanges. Click to read more. 
+					a(href="https://near.herewallet.app/blog/how-to-withdraw-to-card") You can withdraw NEAR to Binance or other exchanges. Click to read more. 
 		.price-widget 
 			div
 				p Point price: 
