--- a/pager/index.pug
+++ b/pager/index.pug
@@ -140,7 +140,7 @@ html(lang="en")
 					span.price
 					.tooltip-container
 						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
-						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+						.tooltip 1 point × Point prize
 							br
 							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
@@ -177,7 +177,7 @@ html(lang="en")
 					span.price
 					.tooltip-container
 						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
-						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+						.tooltip 1 point × Point prize.
 							br
 							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
@@ -385,8 +385,8 @@ html(lang="en")
 			div
 				p Point price: 
 					span.price ___
-			div
-				p Bounty bank: 
-					span.bank ______
+			//- div
+			//- 	p Bounty bank: 
+			//- 		span.bank ______
 
 		script(type="module", src="index.ts")
