--- a/pager/index.pug
+++ b/pager/index.pug
@@ -309,7 +309,7 @@ html(lang="en")
 					li
 						span What to do next? 
 					li 1. We will be announcing 3 pre-sales on Twitter for 50-100 NFT. The earlier you sell, the higher the price will be
-					li 2. Pre-sales will be available for users with a 500+ score or for those who have connected a Binance account. Make sure you are ready.
+					li 2. Pre-sales will be available for users with a 500+ weekly score or for those who have H.E.R.E from Starbox NFT. Make sure you are ready.
 
 				.screen-your__send
 					div.sell-nft-wrap
