--- a/pager/index.pug
+++ b/pager/index.pug
@@ -319,6 +319,19 @@ html(lang="en")
 						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
 							| Trade on Tradeport now
 		
+		.congrats-screen.screen-your
+			.screen-your__left
+				.screen-your__h2 Congratulation!
+				ul.screen-your__ul
+					li You burned pager and receive USDT. Check your account. Happy new year!
+					br
+					li Share your profit with tag #burnpager and we will send you additional USDT gift!
+				
+				.screen-your__send
+					div.sell-nft-wrap
+						a(href="https://t.me/herewalletchat").screen-your__btn_transp 
+							p(style="margin-top: 8px; display: block !important") Share in telegram
+
 		.screen-howitwork
 			h2.title-black How it works
 			.screen-howitwork__wrapper
@@ -385,8 +398,8 @@ html(lang="en")
 			div
 				p Point price: 
 					span.price ___
-			//- div
-			//- 	p Bounty bank: 
-			//- 		span.bank ______
+			div
+				p Bounty bank: 
+					span.bank ______
 
 		script(type="module", src="index.ts")
