--- a/pager/index.pug
+++ b/pager/index.pug
@@ -64,7 +64,7 @@ html(lang="en")
 
 		.screen-stock
 			.screen-stock__wrapper
-				.screen-stock_title 10000 pagers in stock
+				.screen-stock_title Mint is over
 				.stock-p Mint BASIC PAGER, upgrade it to increase the price and sell on buyback on January 1.
 				.screen-stock__slider
 					.screen-stock__slider-item
