--- a/pager/index.pug
+++ b/pager/index.pug
@@ -394,12 +394,12 @@ html(lang="en")
 				.section-faq__ask How to withdraw USDT to a bank card
 				.section-faq__answer 
 					a(href="https://near.herewallet.app/blog/how-to-withdraw-to-card") You can withdraw NEAR to Binance or other exchanges. Click to read more. 
-		.price-widget 
-			div
-				p Point price: 
-					span.price ___
-			div
-				p Bounty bank: 
-					span.bank ______
+		//- .price-widget 
+		//- 	div
+		//- 		p Point price: 
+		//- 			span.price ___
+		//- 	div
+		//- 		p Bounty bank: 
+		//- 			span.bank ______
 
 		script(type="module", src="index.ts")
