--- a/near-landing/index.pug
+++ b/near-landing/index.pug
@@ -4,9 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title HERE Wallet - self-custodial wallet for NEAR Protocol
+        title HERE Wallet - mobile and web wallet for NEAR Protocol
 
-        <meta name="description" content="Discover HERE, a self-custodial crypto wallet for storing, transferring, and staking NEAR and Aurora. Features built-in DEX aggregator on Orderly and Ref Finance, support for NFTs, and liquid NEAR staking." />
+        <meta name="description" content="Self-custodial mobile and web crypto wallet for storing, transferring, and staking NEAR and Aurora. Features built-in DEX aggregator on Orderly and Ref Finance, support for NFTs, and liquid NEAR staking." />
         <meta name="keywords" content="NEAR Protocol, crypto wallet, self-custodial wallet, NEAR, Aurora, Stake NEAR, Buy NEAR, NEAR NFTs, DEX aggregator, Orderly, Ref Finance, cryptocurrency, NEAR blockchain, crypto investments" />
 
         meta(name="og:title", content="HERE Wallet for NEAR and Aurora")
