--- a/blog/_article.pug
+++ b/blog/_article.pug
@@ -63,7 +63,7 @@ html(lang="en")
                             .post-date
                                 | #{metadata.date}
                         .post-content
-                            != content
+                            | !{content}
                             .subscribe-email-form
                                 p.title 
                                     | Subscribe to get useful tutorials and updates!
