--- a/blog/style.sass
+++ b/blog/style.sass
@@ -84,7 +84,6 @@ h6
     font-style: inherit
     font-weight: 400
 h1
-    font-family: Cabinet Grotesk
     font-size: 64px
     font-style: normal
     font-weight: 900
@@ -625,3 +624,21 @@ section
         text-align: center
         color: #2C3034
         margin-top: 32px
+
+.switch-lang
+    font-family: Inter
+    font-size: 18px
+    font-weight: 500
+    text-decoration: none
+    color: #2C3034
+    margin-right: 12px
+    text-transform: uppercase
+    transition: 0.2s opacity
+    opacity: 0.7
+
+.switch-lang:hover
+    opacity: 1
+
+.switch-lang.active
+    text-decoration: underline
+    opacity: 1
