--- a/pager/index.pug
+++ b/pager/index.pug
@@ -204,7 +204,7 @@ html(lang="en")
 							img(src="./images/telegram3.svg")
 
 				.screen-your__send
-					button(disable).screen-your__btn(style="width: 100%; max-width: 100%") Mint
+					button.screen-your__btn(style="width: 100%; max-width: 100%", disable) Mint
 					span.screen-your__error
 
 		.screen-your
