--- a/hito-hot/built-last/index.sass
+++ b/hito-hot/built-last/index.sass
@@ -16,4 +16,7 @@
 			letter-spacing: -0.64px
 #built-figure
 	width: 100%
-	height: 400px
+	height: 80%
+	touch-action: none
+	outline: none
+	background-color: #000
